<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"

    tools:context="com.nasa_sac.aerosoul.aerosoul.LoginActivity">

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editTextHeight"
        android:fontFamily="sans-serif"
        android:layout_marginBottom="@dimen/controlMarginVertical"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/editTextPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editTextHeight"
        android:fontFamily="sans-serif"
        android:layout_marginBottom="@dimen/controlMarginVertical"
        android:hint="@string/password" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginBottom="@dimen/controlMarginVertical"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
