<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.nasa_sac.aerosoul.aerosoul.HomeActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_collapseMode="parallax"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/baseBG">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin">

                <android.support.v7.widget.CardView
                    android:id="@+id/cardInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/controlMarginVertical"
                    card:cardBackgroundColor="@color/colorWhite">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/controlMarginHorizontal"
                            android:text="@string/atmosphericData"
                            android:textSize="@dimen/headingSize"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/darkGray"
                            android:paddingStart="@dimen/controlMarginHorizontal"
                            android:paddingLeft="@dimen/controlMarginHorizontal"></View>

                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="@dimen/controlMarginHorizontal">

                            <TableRow
                                android:gravity="center_vertical"
                                android:minHeight="@dimen/rowHeight">

                                <TextView
                                    android:layout_weight="50"
                                    android:text="@string/temperature" />

                                <TextView
                                    android:id="@+id/textTemperature"
                                    android:layout_weight="50"
                                    android:text="@string/temperatureValue" />
                            </TableRow>

                            <TableRow
                                android:gravity="center_vertical"
                                android:minHeight="@dimen/rowHeight">

                                <TextView
                                    android:layout_weight="50"
                                    android:text="@string/humidity" />

                                <TextView
                                    android:id="@+id/textHumidity"
                                    android:layout_weight="50"
                                    android:text="@string/humidityValue" />
                            </TableRow>

                            <TableRow
                                android:gravity="center_vertical"
                                android:minHeight="@dimen/rowHeight">

                                <TextView
                                    android:layout_weight="50"
                                    android:text="@string/airPollutionIndex" />

                                <TextView
                                    android:id="@+id/textAPI"
                                    android:layout_weight="50"
                                    android:text="@string/apiValue" />
                            </TableRow>
                        </TableLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cardSymptom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/controlMarginVertical"
                    card:cardBackgroundColor="@color/colorWhite">

                    <LinearLayout
                        android:id="@+id/listViewContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/controlMarginHorizontal"
                            android:text="@string/symptoms"
                            android:textSize="@dimen/headingSize"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/darkGray"></View>

                        <LinearLayout
                            android:id="@+id/knownSymptoms"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/activity_horizontal_margin"></LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cardAnalysis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card:cardBackgroundColor="@color/colorWhite">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/controlMarginHorizontal"
                            android:text="@string/analysis"
                            android:textSize="@dimen/headingSize"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/darkGray"></View>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/controlMarginHorizontal"
                            android:text="@string/noAnalysisData" />

                        <Button
                            android:id="@+id/showTrendAnalysis"
                            style="@style/ButtonPrimary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="@dimen/activity_horizontal_margin"
                            android:text="@string/trendAnalysis" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </FrameLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>